# Validator

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Validator.hpp
src/: config_t.cpp  helper_funcs.cpp  keyed_data_t.cpp  keyed_list_t.cpp  range_t.cpp  return_t.cpp  valid_list_t.cpp
src/headers/: Validator_core.hpp  config_t.hpp  key_t.hpp  keyed_data_t.hpp  keyed_list_t.hpp  range_t.hpp  return_t.hpp  validator_t.hpp
tests/: main.cpp  tests.cpp
